--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <section class="curso" id="curso">
     <div class="container">
       <div class="curso-header">
-        <h2>Formación completa desde cero</h2>
+        <h2>Conviértete en una experta en el mundo de la manicura con Manic 0.0</h2>
         <p class="curso-subtitle">¿Siempre has querido aprender manicura desde cero? Este curso es tu oportunidad perfecta. Te enseño todo lo necesario para iniciar tu camino profesional:</p>
       </div>
 
@@ -103,47 +103,23 @@
         <h3>Aprendizaje del curso</h3>
         <div class="aprendizaje-grid">
           <div class="aprendizaje-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-              </svg>
-            </div>
+            <img src="/images/icons/seguridad.svg" alt="Esterilización" class="icon-img">
             <p>Esterilización y desinfección</p>
           </div>
           <div class="aprendizaje-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <circle cx="12" cy="12" r="3"></circle>
-                <path d="M12 1v6m0 6v6"></path>
-                <path d="M1 12h6m6 0h6"></path>
-              </svg>
-            </div>
+            <img src="/images/icons/torno.svg" alt="Torno" class="icon-img">
             <p>Manicura combinada (torno + alicate/tijera)</p>
           </div>
           <div class="aprendizaje-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <path d="M12 19l7 3-7-10-7 10 7-3z"></path>
-                <path d="M12 2v10"></path>
-              </svg>
-            </div>
+            <img src="/images/icons/pincel.svg" alt="Pincel" class="icon-img">
             <p>Decoración de tendencia</p>
           </div>
           <div class="aprendizaje-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
-              </svg>
-            </div>
+            <img src="/images/icons/nivelacion.svg" alt="Nivelación" class="icon-img">
             <p>Nivelación</p>
           </div>
           <div class="aprendizaje-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <path d="M4 19.5A2.5 2.5 0 016.5 17H20"></path>
-                <path d="M6.5 2H20v20H6.5A2.5 2.5 0 014 19.5v-15A2.5 2.5 0 016.5 2z"></path>
-              </svg>
-            </div>
+            <img src="/images/icons/libro.svg" alt="Libro" class="icon-img">
             <p>Libro "Guía Metodológica" incluido</p>
           </div>
         </div>
@@ -151,33 +127,36 @@
         <p class="curso-cta-text">¡Reserva tu lugar ahora y comienza a crear uñas espectaculares!</p>
       </div>
 
-      <div class="curso-estructura">
-        <h3>Estructura del curso</h3>
-        <div class="estructura-grid">
-          <div class="estructura-card">
+      <div class="curso-programa">
+        <h3>Programa del curso</h3>
+        <div class="programa-grid">
+          <div class="programa-card">
             <div class="card-number">Día 1</div>
-            <ul>
-              <li>Teoría</li>
-              <li>Demostración</li>
-              <li>Práctica en una mano de la alumna</li>
-            </ul>
+            <div class="programa-schedule">
+              <p><strong>11:00 – 14:00</strong> Teoría</p>
+              <p><strong>14:00 – 15:00</strong> Pausa</p>
+              <p><strong>15:00 – hasta terminar</strong> Demostración + práctica en una mano de la alumna</p>
+            </div>
           </div>
-          <div class="estructura-card">
+          <div class="programa-card">
             <div class="card-number">Día 2</div>
-            <ul>
-              <li>Trabajo con una modelo</li>
-              <li>Trabajo con otra modelo distinta</li>
-            </ul>
+            <div class="programa-schedule">
+              <p><strong>10:00 – 14:00</strong> Trabajo con una modelo</p>
+              <p><strong>14:00 – 15:00</strong> Pausa</p>
+              <p><strong>15:00 – hasta terminar</strong> Trabajo con otra modelo</p>
+            </div>
           </div>
-          <div class="estructura-card">
+          <div class="programa-card">
             <div class="card-number">Día 3</div>
-            <ul>
-              <li>Práctica con modelo</li>
-              <li>Diploma</li>
-              <li>Revisión de Instagram profesional</li>
-              <li>Lista personalizada de imprescindibles</li>
-            </ul>
+            <div class="programa-schedule">
+              <p><strong>10:00 – hasta terminar</strong> Práctica con modelo</p>
+              <p><strong>Al finalizar</strong> Diploma, revisión personalizada del Instagram profesional y lista de compra personalizada</p>
+            </div>
           </div>
+        </div>
+        <div class="programa-extras">
+          <p class="extra-item">🧰 Kit completo incluido</p>
+          <p class="extra-item">📘 Libro "Guía Metodológica" incluido</p>
         </div>
       </div>
 
@@ -245,13 +224,13 @@
   <section class="gallery">
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="/images/Foto2.JPG" alt="Lili trabajando">
+        <img src="/images/Foto7.jpg" alt="Lili">
       </div>
       <div class="gallery-item">
-        <img src="/images/Foto3.JPG" alt="Detalle de trabajo">
+        <img src="/images/Foto6.JPG" alt="Lili">
       </div>
       <div class="gallery-item">
-        <img src="/images/Foto4.JPG" alt="Manicura profesional">
+        <img src="/images/Foto8.JPG" alt="Lili">
       </div>
       <div class="gallery-item">
         <img src="/images/Foto5.JPG" alt="Trabajo detallado">
@@ -262,66 +241,33 @@
   <!-- GUÍA METODOLÓGICA SECTION -->
   <section class="guia" id="guia">
     <div class="container">
-      <div class="guia-content">
-        <div class="guia-image">
-          <img src="/images/Foto6.JPG" alt="Guía Metodológica">
+      <div class="guia-intro">
+        <div class="guia-intro-image">
+          <img src="/images/Foto1.JPG" alt="Guía Metodológica">
         </div>
-        <div class="guia-text">
+        <div class="guia-intro-text">
           <h2>Guía Metodológica</h2>
           <p>Es un libro completo que reúne la información esencial para una manicurista. Está escrito de forma clara y práctica, para mejorar la técnica y optimizar los tiempos de servicio.</p>
-
-          <div class="guia-contenido">
-            <h3>Contenido principal</h3>
-            <div class="contenido-grid">
-              <div class="contenido-item">
-                <div class="icon-circle">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-                    <circle cx="12" cy="7" r="4"></circle>
-                  </svg>
-                </div>
-                <p>Anatomía</p>
-              </div>
-              <div class="contenido-item">
-                <div class="icon-circle">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-                  </svg>
-                </div>
-                <p>Higiene y esterilización</p>
-              </div>
-              <div class="contenido-item">
-                <div class="icon-circle">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <circle cx="12" cy="12" r="10"></circle>
-                    <circle cx="12" cy="12" r="3"></circle>
-                    <line x1="12" y1="2" x2="12" y2="9"></line>
-                    <line x1="12" y1="15" x2="12" y2="22"></line>
-                  </svg>
-                </div>
-                <p>Enfermedades</p>
-              </div>
-              <div class="contenido-item">
-                <div class="icon-circle">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <path d="M9 11l3 3L22 4"></path>
-                    <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"></path>
-                  </svg>
-                </div>
-                <p>Preparación técnica</p>
-              </div>
-              <div class="contenido-item">
-                <div class="icon-circle">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <circle cx="12" cy="12" r="10"></circle>
-                    <polyline points="12 6 12 12 16 14"></polyline>
-                  </svg>
-                </div>
-                <p>Optimización del tiempo</p>
-              </div>
-            </div>
-          </div>
         </div>
+      </div>
+
+      <div class="guia-contenido">
+        <h3>Contenido principal</h3>
+        <ul class="contenido-list">
+          <li>Anatomía de la uña</li>
+          <li>Higiene y esterilización</li>
+          <li>Enfermedades</li>
+          <li>Preparación de la uña</li>
+          <li>Organización del puesto</li>
+          <li>Métodos para optimizar tiempos</li>
+        </ul>
+      </div>
+
+      <div class="guia-final">
+        <div class="guia-final-image">
+          <img src="/images/Foto4.JPG" alt="Guía Metodológica">
+        </div>
+        <a href="https://instagram.com" class="btn-primary">Obtener la Guía Metodológica</a>
       </div>
     </div>
   </section>
@@ -341,12 +287,6 @@
     </div>
   </section>
 
-  <!-- CTA FINAL -->
-  <section class="cta-final">
-    <div class="container">
-      <a href="https://instagram.com" class="btn-primary-large">Obtener la Guía Metodológica</a>
-    </div>
-  </section>
 
   <!-- FOOTER -->
   <footer class="footer">
