--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h3>Aprendizaje del curso</h3>
         <div class="aprendizaje-grid">
           <div class="aprendizaje-item">
-            <img src="/images/icons/escudo.jpeg" alt="Esterilización" class="icon-img">
+            <img src="/images/icons/escudo" alt="Esterilización" class="icon-img">
             <p>Esterilización y desinfección</p>
           </div>
           <div class="aprendizaje-item">
