--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="hero-content">
         <div class="hero-image">
-          <img src="/images/Foto7.jpg" alt="Lili - Formadora de Manicura">
+          <img src="/images/Foto1.jpg" alt="Lili - Formadora de Manicura">
         </div>
         <div class="hero-text">
           <h1>Formación profesional en manicura</h1>
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="quien-soy-content">
         <div class="quien-soy-image">
-          <img src="/images/Foto1.JPG" alt="Lili">
+          <img src="/images/Foto7.JPG" alt="Lili">
         </div>
         <div class="quien-soy-text">
           <h2>Quién soy</h2>
@@ -103,23 +103,23 @@
         <h3>Aprendizaje del curso</h3>
         <div class="aprendizaje-grid">
           <div class="aprendizaje-item">
-            <img src="/images/icons/escudo" alt="Esterilización" class="icon-img">
+            <img src="/images/icons/escudo.jpeg" alt="Esterilización" class="icon-img">
             <p>Esterilización y desinfección</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/torno.svg" alt="Torno" class="icon-img">
+            <img src="/images/icons/torno" alt="Torno" class="icon-img">
             <p>Manicura combinada (torno + alicate/tijera)</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/pincel.svg" alt="Pincel" class="icon-img">
+            <img src="/images/icons/pincel" alt="Pincel" class="icon-img">
             <p>Decoración de tendencia</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/nivelacion.svg" alt="Nivelación" class="icon-img">
+            <img src="/images/icons/nivelacion" alt="Nivelación" class="icon-img">
             <p>Nivelación</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/libro.svg" alt="Libro" class="icon-img">
+            <img src="/images/icons/libro" alt="Libro" class="icon-img">
             <p>Libro "Guía Metodológica" incluido</p>
           </div>
         </div>
@@ -224,16 +224,16 @@
   <section class="gallery">
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="/images/Foto7.jpg" alt="Lili">
+        <img src="/images/Foto2.jpg" alt="Lili">
       </div>
       <div class="gallery-item">
-        <img src="/images/Foto6.JPG" alt="Lili">
+        <img src="/images/Foto4.JPG" alt="Lili">
       </div>
       <div class="gallery-item">
-        <img src="/images/Foto8.JPG" alt="Lili">
+        <img src="/images/Foto3.JPG" alt="Lili">
       </div>
       <div class="gallery-item">
-        <img src="/images/Foto5.JPG" alt="Trabajo detallado">
+        <img src="/images/Foto6.JPG" alt="Trabajo detallado">
       </div>
     </div>
   </section>
@@ -265,9 +265,9 @@
 
       <div class="guia-final">
         <div class="guia-final-image">
-          <img src="/images/Foto4.JPG" alt="Guía Metodológica">
+          <img src="/images/Foto5.JPG" alt="Guía Metodológica">
         </div>
-        <a href="https://instagram.com" class="btn-primary">Obtener la Guía Metodológica</a>
+        <a href="https://www.instagram.com/lii.lab/?hl=es" class="btn-primary">Obtener la Guía Metodológica</a>
       </div>
     </div>
   </section>
