--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h3>Aprendizaje del curso</h3>
         <div class="aprendizaje-grid">
           <div class="aprendizaje-item">
-            <img src="/images/icons/escudo.jpeg" alt="Esterilización" class="icon-img">
+            <img src="/images/escudo.jpeg" alt="Esterilización" class="icon-img">
             <p>Esterilización y desinfección</p>
           </div>
           <div class="aprendizaje-item">
@@ -265,7 +265,7 @@
 
       <div class="guia-final">
         <div class="guia-final-image">
-          <img src="/images/Foto5.JPG" alt="Guía Metodológica">
+          <img src="/images/Foto8.JPG" alt="Guía Metodológica">
         </div>
         <a href="https://www.instagram.com/lii.lab/?hl=es" class="btn-primary">Obtener la Guía Metodológica</a>
       </div>
@@ -281,7 +281,7 @@
           <p>Además, puede utilizarse como una guía complementaria para los cursos, facilitando el trabajo a la profesora y evitando que tenga que crear su propio material desde cero, ahorrando tiempo y manteniendo una metodología estructurada y profesional.</p>
         </div>
         <div class="formadoras-image">
-          <img src="/images/Foto8.JPG" alt="Lili con la guía">
+          <img src="/images/Foto5.JPG" alt="Lili con la guía">
         </div>
       </div>
     </div>
