--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
         <h3>Aprendizaje del curso</h3>
         <div class="aprendizaje-grid">
           <div class="aprendizaje-item">
-            <img src="/images/escudo.jpeg" alt="Esterilización" class="icon-img">
+            <img src="/images/escudo.jpg" alt="Esterilización" class="icon-img">
             <p>Esterilización y desinfección</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/torno" alt="Torno" class="icon-img">
+            <img src="/images/icons/torno.jpg" alt="Torno" class="icon-img">
             <p>Manicura combinada (torno + alicate/tijera)</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/pincel" alt="Pincel" class="icon-img">
+            <img src="/images/icons/pincel.jpg" alt="Pincel" class="icon-img">
             <p>Decoración de tendencia</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/nivelacion" alt="Nivelación" class="icon-img">
+            <img src="/images/icons/nivelacion .jpg" alt="Nivelación" class="icon-img">
             <p>Nivelación</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/libro" alt="Libro" class="icon-img">
+            <img src="/images/icons/libro .jpg" alt="Libro" class="icon-img">
             <p>Libro "Guía Metodológica" incluido</p>
           </div>
         </div>
@@ -165,15 +165,10 @@
         <div class="info-grid">
           <div class="info-item">
             <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <line x1="12" y1="1" x2="12" y2="23"></line>
-                <path d="M17 5H9.5a3.5 3.5 0 000 7h5a3.5 3.5 0 010 7H6"></path>
-              </svg>
-            </div>
-            <div>
-              <strong>Precio</strong>
-              <p>800€</p>
-            </div>
+              <img src="/images/euro.svg" alt="euro icon">
+    </div>
+    <strong>Precio</strong>
+    <p>800€</p>
           </div>
           <div class="info-item">
             <div class="icon-circle">
@@ -243,7 +238,7 @@
     <div class="container">
       <div class="guia-intro">
         <div class="guia-intro-image">
-          <img src="/images/Foto1.JPG" alt="Guía Metodológica">
+          <img src="/images/Foto5.JPG" alt="Guía Metodológica">
         </div>
         <div class="guia-intro-text">
           <h2>Guía Metodológica</h2>
@@ -263,9 +258,13 @@
         </ul>
       </div>
 
-      <div class="guia-final">
-        <div class="guia-final-image">
-          <img src="/images/Foto8.JPG" alt="Guía Metodológica">
+       <div class="formadoras-content">
+        <div class="formadoras-text">
+          <h3>Para formadoras y profesionales</h3>
+          <p>Además, puede utilizarse como una guía complementaria para los cursos, facilitando el trabajo a la profesora y evitando que tenga que crear su propio material desde cero, ahorrando tiempo y manteniendo una metodología estructurada y profesional.</p>
+        </div>
+        <div class="formadoras-image">
+          <img src="/images/Foto5.JPG" alt="Lili con la guía">
         </div>
         <a href="https://www.instagram.com/lii.lab/?hl=es" class="btn-primary">Obtener la Guía Metodológica</a>
       </div>
