--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="hero-content">
         <div class="hero-image">
-          <img src="/images/Foto1.jpg" alt="Lili - Formadora de Manicura">
+          <img src="/images/Foto1.JPG" alt="Lili - Formadora de Manicura">
         </div>
         <div class="hero-text">
           <h1>Formación profesional en manicura</h1>
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="quien-soy-content">
         <div class="quien-soy-image">
-          <img src="/images/Foto7.JPG" alt="Lili">
+          <img src="/images/Foto7.jpg" alt="Lili">
         </div>
         <div class="quien-soy-text">
           <h2>Quién soy</h2>
@@ -103,23 +103,23 @@
         <h3>Aprendizaje del curso</h3>
         <div class="aprendizaje-grid">
           <div class="aprendizaje-item">
-            <img src="/images/escudo.jpg" alt="Esterilización" class="icon-img">
+            <img src="/images/Escudo.jpg" alt="Esterilización" class="icon-img">
             <p>Esterilización y desinfección</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/torno.jpg" alt="Torno" class="icon-img">
+            <img src="/images/Torno.jpg" alt="Torno" class="icon-img">
             <p>Manicura combinada (torno + alicate/tijera)</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/pincel.jpg" alt="Pincel" class="icon-img">
+            <img src="/images/Pincel.jpg" alt="Pincel" class="icon-img">
             <p>Decoración de tendencia</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/nivelacion .jpg" alt="Nivelación" class="icon-img">
+            <img src="/images/Nivelacion .jpg" alt="Nivelación" class="icon-img">
             <p>Nivelación</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/icons/libro .jpg" alt="Libro" class="icon-img">
+            <img src="/images/Libro .jpg" alt="Libro" class="icon-img">
             <p>Libro "Guía Metodológica" incluido</p>
           </div>
         </div>
@@ -165,42 +165,30 @@
         <div class="info-grid">
           <div class="info-item">
             <div class="icon-circle">
-              <img src="/images/euro.svg" alt="euro icon">
+              <img src="/images/Euro .jpg" alt="euro icon">
     </div>
     <strong>Precio</strong>
     <p>800€</p>
           </div>
           <div class="info-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <circle cx="12" cy="12" r="10"></circle>
-                <polyline points="12 6 12 12 16 14"></polyline>
-              </svg>
-            </div>
-            <div>
+       <div class="info-item">
+    <div class="icon-circle">
+        <img src="/images/Reloj.jpg" alt="reloj icon">
+    </div>
               <strong>Duración</strong>
               <p>3 días</p>
             </div>
           </div>
           <div class="info-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <path d="M21 16V8a2 2 0 00-1-1.73l-7-4a2 2 0 00-2 0l-7 4A2 2 0 003 8v8a2 2 0 001 1.73l7 4a2 2 0 002 0l7-4A2 2 0 0021 16z"></path>
-              </svg>
-            </div>
-            <div>
+              <img src="/images/Caja.jpg" alt="caja icon">
+    </div>
               <strong>Kit completo</strong>
               <p>Incluido</p>
             </div>
           </div>
           <div class="info-item">
-            <div class="icon-circle">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                <path d="M4 19.5A2.5 2.5 0 016.5 17H20"></path>
-                <path d="M6.5 2H20v20H6.5A2.5 2.5 0 014 19.5v-15A2.5 2.5 0 016.5 2z"></path>
-              </svg>
-            </div>
-            <div>
+              <img src="/images/Libro .jpg" alt="libro icon">
+    </div>
               <strong>Guía</strong>
               <p>Incluida</p>
             </div>
