--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p>Decoración de tendencia</p>
           </div>
           <div class="aprendizaje-item">
-            <img src="/images/Nivelacion .jpg" alt="Nivelación" class="icon-img">
+            <img src="/images/Nivelación .jpg" alt="Nivelación" class="icon-img">
             <p>Nivelación</p>
           </div>
           <div class="aprendizaje-item">
