--- a/index.html
+++ b/index.html
@@ -122,9 +122,12 @@
             <img src="/images/Libro .jpg" alt="Libro" class="icon-img">
             <p>Libro "Guía Metodológica" incluido</p>
           </div>
+        <div class="aprendizaje-item">
+            <img src="/images/Caja.jpg" alt="Caja" class="icon-img">
+            <p> Kit completo incluido</p>
         </div>
         <p class="curso-ideal">Ideal para principiantes que quieren empezar con bases sólidas y técnicas modernas.</p>
-        <p class="curso-cta-text">¡Reserva tu lugar ahora y comienza a crear uñas espectaculares!</p>
+        <p class="curso-cta-text">Reserva tu lugar ahora y comienza a crear uñas espectaculares!</p>
       </div>
 
       <div class="curso-programa">
@@ -155,8 +158,7 @@
           </div>
         </div>
         <div class="programa-extras">
-          <p class="extra-item">🧰 Kit completo incluido</p>
-          <p class="extra-item">📘 Libro "Guía Metodológica" incluido</p>
+  
         </div>
       </div>
 
